<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/avd_cut"
        android:orderInCategory="1"
        android:title="@string/title_action_cut"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/avd_copy"
        android:orderInCategory="2"
        android:title="@string/title_action_copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/avd_delete"
        android:orderInCategory="3"
        android:title="@string/title_action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/avd_share"
        android:orderInCategory="4"
        android:title="@string/title_action_share"
        app:showAsAction="always" />

</menu>