<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/love_it_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:button="@drawable/fill_in_heart"
        android:layout_gravity="left"
        android:paddingLeft="8dp"
        android:text="@string/love_it"
        android:textColor="@color/heart_text"
        android:textSize="24sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:src="@drawable/ic_clear_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/example_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/example_from_documentation"
        app:drawableBottomCompat="@drawable/avd"
        app:layout_constraintTop_toBottomOf="@id/love_it_cb"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/example_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/rotation_only"
        app:drawableBottomCompat="@drawable/avd_rotation_only"
        app:layout_constraintTop_toBottomOf="@id/example_1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/example_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/path_morph_only"
        app:drawableBottomCompat="@drawable/avd_path_morph_only"
        app:layout_constraintTop_toBottomOf="@id/example_2"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>